--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li  <a href="/recipes/toast.html">Toast</a></li>
-        <li  <a href="/recipes/eggs.html">Eggs</a></li>
-        <li  <a href="/recipes/cornflakes.html">Cornflakes</a></li>
+        <li><a href="recipes/toast.html">Toast</a></li>
+        <li><a href="recipes/eggs.html">Eggs</a></li>
+        <li><a href="recipes/cornflakes.html">Cornflakes</a></li>
     </ul>
 </body>
 </html>
